fix: I'm done with shell, its not working

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,7 +10,9 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Generate HTML
-        run: ./create-html.sh
+        run: |
+          mkdir -p ./build
+          envsubst < ./src/template.html > ./build/index.html
 
       - name: Upload Artefact
         id: deployment
