--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,6 +1,9 @@
 name: deploy.yml
 on: workflow_dispatch
 
+env:
+  DISCORD_ID: ${{ vars.DISCORD_ID }}
+
 jobs:
   build:
     runs-on: ubuntu-latest
